--- a/react/package.json
+++ b/react/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^3.1.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "inputmask": "^5.0.9",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
